--- a/web/src/main/java/assets/less/main.less
+++ b/web/src/main/java/assets/less/main.less
@@ -165,3 +165,14 @@ body {
 //  box-shadow: 0 0 40px #aaa;
 //}
 
+.static-warning {
+  display: none;
+  padding: 20px;
+  background-color: darken(@accentColor, 30%);
+  color: white;
+
+  a {
+    color: lighten(@accentColor, 20%);
+    font-weight: bold;
+  }
+}
