--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -36,6 +36,10 @@ block content
                         i.fa.fa-th
                         |  Edit Layout
                 li
+                    a(href="/export-config")
+                        i.fa.fa-share
+                        |  Export config
+                li
                     a(href="/logout")
                         i.fa.fa-sign-out
                         |  Log out
