--- a/web/src/main/resources/templates/module-settings.jade
+++ b/web/src/main/resources/templates/module-settings.jade
@@ -29,4 +29,9 @@ block content
             .col-md-12
                 input(type="submit", class="btn btn-primary", value="Save")
 
+    if STATIC_CONFIG
+        script(type="text/javascript").
+            window.onload = function(){
+                $('.static-warning').show();
+            }
 block scripts
