--- a/web/src/main/resources/templates/add-remote.jade
+++ b/web/src/main/resources/templates/add-remote.jade
@@ -26,3 +26,10 @@ block content
 
     h1#remote-name
     #remote-modules
+
+
+    if STATIC_CONFIG
+        script(type="text/javascript").
+            window.onload = function(){
+                $('.static-warning').show();
+            }
